--- a/public/index.html
+++ b/public/index.html
@@ -17,25 +17,27 @@
   <link rel="stylesheet" href="/css/foodhut.css">
   <link rel="stylesheet" href="/css/flag-icon.min.css">
 
+
 </head>
 
 <body>
-   <main>
+  <main>
     <div class="overlay">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+      <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
-   
 
-  <script src="/vendors/jquery/jquery-3.4.1.js"></script>
-  <script src="/vendors/bootstrap/bootstrap.bundle.js"></script>
 
-  <script src="/vendors/bootstrap/bootstrap.affix.js"></script>
+      <script src="/vendors/jquery/jquery-3.4.1.js"></script>
+      <script src="/vendors/bootstrap/bootstrap.bundle.js"></script>
+      <script src="/vendors/bootstrap/bootstrap.affix.js"></script>
 
-  <script src="/vendors/wow/wow.js"></script>
+      <script src="/vendors/wow/wow.js"></script>
 
-  <script src="/js/foodhut.js"></script>
-</div>
-</main>
+      <script src="/js/foodhut.js"></script>
+      <script src="https://kit.fontawesome.com/589ee51264.js" crossorigin="anonymous"></script>
+
+    </div>
+  </main>
 </body>
 
 </html>
